kube/deploy/core/_networking/cilium/netpols/labelled-allow-egress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: apiserver
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      component: apiserver
      provider: kubernetes
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-apiserver
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/apiserver: allow
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-world
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world: allow
  egress:
    - toEntities:
        - world
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-world-https
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world-https: allow
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
# ---
# # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: labelled-allow-egress-home-dns
# spec:
#   endpointSelector:
#     matchLabels:
#       egress.home.arpa/home-dns: allow
#   egress:
#     - toCIDRSet:
#         - cidr: "${IP_HOME_DNS}/32"
#       toPorts:
#         - ports:
#             - port: "53"
#               protocol: ANY
#           rules:
#             dns:
#               - matchPattern: "*"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-ntp
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world-ntp: allow
  egress:
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "123"
              protocol: "UDP"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-dlna
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/dlna: allow
  egress:
    - toCIDR:
        - "239.255.255.250/32"
      toPorts:
        - ports:
            - port: "1900"
              protocol: "UDP"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-cloudflare-r2
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/r2: allow
  egress:
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
